# Dashbang_ECS_OLD

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  vcpkg.json
src/Engine/: CMakeLists.txt
src/Engine/Audio/Internal/: AudioLog.hpp  AudioTypes.hpp
src/Engine/Audio/Internal/Backends/: MiniAudioBackend.cpp  MiniAudioBackend.hpp
src/Engine/Audio/Private/: AudioCatalog.cpp  AudioSystem.cpp  AutioTypes.cpp  InitAudioSystem.cpp
src/Engine/Audio/Public/: AudioAPI.hpp  AudioFwd.hpp  IAudioBackend.hpp
src/Engine/Component/Private/: AllComponents.hpp  CameraComponents.hpp  CommonComponents.hpp  GraphicsComponents.hpp  InputComponents.hpp  Logic2DComponents.hpp  TagsComponents.hpp  UtilsComponents.hpp
src/Engine/Component/Private/Camera/: CameraComponent.hpp  FollowCameraComponent.hpp
src/Engine/Component/Private/Common/: LifetimeComponent.hpp  TransformComponent.hpp
src/Engine/Component/Private/Graphics/: AnimatorComponent.hpp  MaterialComponent.hpp  MeshComponent.hpp  ModelSizeComponent.hpp  ShaderComponent.hpp
src/Engine/Component/Private/Input/: AnalogInputComponent.hpp  InputBindingComponent.hpp  MouseCursorComponent.hpp
src/Engine/Component/Private/Logic2D/: CollisionComponent.hpp  Logic2DComponent.hpp  TileGridXZComponent.hpp  TileMapComponent.hpp  Transform2DComponent.hpp  Velocity2DComponent.hpp
src/Engine/Component/Private/Tags/: DummyTagComp.hpp  MapTagsComponent.hpp  (+4 more)
src/Engine/Component/Public/: ComponentFwd.hpp
src/Engine/Config/: CanonicalDefaults.h
src/Engine/Core/Public/: StrongID.hpp
src/Engine/Debug/Private/: DebugDraw.cpp  Profiling.cpp
src/Engine/Debug/Public/: DebugDrawAPI.hpp  DebugFWD.hpp  ProfilingAPI.hpp
src/Engine/ECS/: ComponentFilter.inl  Entity.h  EntityManager.cpp  EntityManager.h
src/Engine/ECS/EntityUtils/: EntityUtils.cpp  EntityUtils.h
src/Engine/ECS/GlobalSystem/: GlobalCleanupSystem.cpp  GlobalCleanupSystem.h
src/Engine/ECS/Meta/: InitPhase.h  InitPhaseSpecialization.h
src/Engine/ECS/Ops/: CoreOps.hpp
src/Engine/ECS/Public/: ECSApi.hpp  ECSFwd.hpp  Entity.hpp  Types.hpp
src/Engine/FSM/Private/: AllFSMSystem.hpp
src/Engine/FSM/Public/: FSMApi.hpp  FSMFwd.hpp
src/Engine/Graphics/Internal/: GraphicsInternalTypes.hpp  GraphicsLog.hpp
src/Engine/Graphics/Private/: AllRendererSystem.cpp
src/Engine/Graphics/Public/: GraphicsApi.hpp  GraphicsFwd.hpp  Types.hpp
src/Engine/IO/Private/: FileSystem.cpp  InitFileSystem.cpp  VfsDiagnostics.hpp
src/Engine/IO/Public/: FileSystemAPI.hpp  FileSystemFwd.hpp
src/Engine/InputManager/Private/: InputManager.cpp
src/Engine/InputManager/Public/: InputFwd.hpp  Types.hpp
src/Engine/Log/Private/: Logger.cpp
src/Engine/Log/Public/: LogApi.hpp
src/Engine/Math/Private/: GlmBridge.hpp  MathAPI.cpp  MathUtils.h
src/Engine/Math/Public/: MathAPI.hpp  MathFwd.hpp
src/Engine/Physics/Public/: Geometry2DTypes.hpp
src/Engine/Platform/Private/: PlatformSystem.cpp
src/Engine/Platform/Pubilc/: PlatformAPI.hpp
src/Engine/Public/: EngineFwd.hpp
src/Engine/Sync/Private/: LogicToTransform.cpp  LogicToTransformSystem.cpp  LogicToTransformSystem.h
src/Engine/Sync/Public/: SyncApi.hpp
src/Engine/Time/Private/: WorldClock.cpp  WorldClock.hpp
src/Engine/Time/Public/: WorldClockFwd.hpp
src/Engine/VFX/Internal/: VFXLog.hpp  VFXTypes.hpp
src/Engine/VFX/Private/: InitVFXSystem.cpp  VFXCatalog.cpp  VFXRuntimeCache.cpp  VFXSystem.cpp  VFXTypes.cpp
src/Engine/VFX/Public/: VFXAPI.hpp  VFXFwd.hpp
src/Engine/Window/Private/: Window.cpp
src/Engine/Window/Public/: Window.h  WindowFwd.hpp
src/Engine/WorldSystem/Private/: AllWorldSystem.hpp
src/Engine/WorldSystem/Public/: WorldFwd.hpp
src/Game/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
src/Game/00_Feature/Public/: EffectFeature.hpp  HitBoxFeature.hpp
src/Game/01_Layer/Private/: AnimResolverLayerFeature.cpp  AudioLayerFeature.cpp  DrawLayerFeature.cpp  InitializeLayerFeature.cpp  InputLayerFeature.cpp  IntentLayerFeature.cpp  LogicLayerFeature.cpp  ResolverLayerFeature.cpp  StateLayerFeature.cpp  debugLayerFeature.cpp
src/Game/01_Layer/Public/: LayerFeature.hpp
src/Game/Actor/Map/: TestBaseTerrainActor.cpp  TestBaseTerrainActor.h  TileMapActor.cpp  TileMapActor.h
src/Game/Actor/Private/: TestCamActor.cpp  TestDummyActor.cpp  TestMapActor.cpp  TestPlayerActor.cpp
src/Game/Actor/Public/: ActorFwd.hpp  TestCamActor.hpp  TestDummyActor.hpp  TestMapActor.hpp  TestPlayerActor.hpp
src/Game/Audio/Internal/: DTO.hpp  GameAudioInternalAPI.hpp  GameAudioLog.hpp
src/Game/Audio/Private/: CatalogBuilder.cpp  CatalogBuilder.hpp  DTO.cpp  InitGameAudioSystem.cpp
src/Game/Audio/Public/: GameAudioAPI.hpp  GameAudioFwd.hpp
src/Game/Camera/Private/: CameraFollowSystem.cpp  CameraFollowSystem.h
src/Game/Camera/Public/: CameraApi.hpp
src/Game/Collision/Private/: AllCollisionSystem.cpp  CollisionDetectionSystem.cpp  Detection.cpp  GenericShape2D.hpp  GenericShape2DConverter.cpp  GenericShape2DConverter.hpp  GenericShape2DIntersects.cpp  GenericShape2DIntersects.hpp  InitCollisionSystem.cpp  ResultStorage.cpp  memo.md
src/Game/Collision/Public/: CollisionApi.hpp  CollisionFwd.hpp  CollisionMaskComponent.hpp  Types.hpp
src/Game/Common/Private/: AppContext.h
src/Game/Common/Public/: GameCommonFwd.hpp
src/Game/Debug/Private/: CCInjectorSystem.cpp  FSMTest.cpp  GameLogger.cpp
src/Game/Debug/Public/: DebugApi.hpp  GameLogger.hpp
src/Game/ECS/Public/: CharacterAttribTags.h  GameECSAPI.hpp  GameECSFwd.hpp
src/Game/FSM/Private/: FSMInit.cpp  InitFunctions.hpp
src/Game/FSM/Public/: FSMApi.hpp
src/Game/Init/Public/: InitApi.hpp
src/Game/Input/Private/: InputMapping.h  InputRouterSystem.cpp
src/Game/Input/Public/: InputActionComponent.hpp  InputApi.hpp  InputFwd.hpp
src/Game/Utils/Private/: SpatialTransformUtils.cpp
src/Game/Utils/Public/: GameUtilsApi.hpp
src/Game/VFX/Internal/: DTO.hpp  GameVFXInternalAPI.hpp  GameVFXLog.hpp
src/Game/VFX/Private/: DTO.cpp  GameVFXCatalogBuilder.cpp  GameVFXCatalogBuilder.hpp  InitGameVFXSystem.cpp
src/Game/VFX/Public/: GameVFXAPI.hpp  GameVFXFwd.hpp
(+262 files in other folders)
